--- a/templates/student/lessonA.html
+++ b/templates/student/lessonA.html
@@ -1659,4 +1659,167 @@
 </section>
 {% endif %}
 <BR>本單元課程自2018.7.1日起已被瀏覽 <a href="/student/counter/{{lesson}}" target="_blank">{{counter}}</a> 次
+  <script src="/static/libs/vendor.js"></script>
+  <script src="/static/libs/scratch-vm.min.js"></script>
+  <script src="/static/libs/scratch-storage.min.js"></script>
+  <script src="/static/libs/scratch-svg-renderer.js"></script>
+  <!-- note: this uses the BUILT version of scratch-render!  make sure to npm run build -->
+  <script src="/static/libs/scratch-render.min.js"></script>
+  
+  <script>
+    // These variables are going to be available in the "window global" intentionally.
+    // Allows you easy access to debug with `vm.greenFlag()` etc.
+    window.devicePixelRatio = 1;
+  
+    window.onload = function (e) {
+      document.querySelectorAll('.renderer').forEach(canvas => {
+        let render = new ScratchRender(canvas);
+        let vm = new VirtualMachine();
+        let storage = new ScratchStorage();
+        const audioEngine = new window.AudioEngine();
+        vm.attachAudioEngine(audioEngine);
+        vm.attachStorage(storage);
+        vm.attachRenderer(render);
+        vm.attachV2SVGAdapter(new ScratchSVGRenderer.SVGRenderer());
+        vm.attachV2BitmapAdapter(new ScratchSVGRenderer.BitmapAdapter());
+  
+        document.addEventListener('mousemove', e => {
+          const rect = canvas.getBoundingClientRect();
+          const coordinates = {
+            x: e.clientX - rect.left,
+            y: e.clientY - rect.top,
+            canvasWidth: rect.width,
+            canvasHeight: rect.height
+          };
+          vm.postIOData('mouse', coordinates);
+        });
+        canvas.addEventListener('mousedown', e => {
+          const rect = canvas.getBoundingClientRect();
+          const data = {
+            isDown: true,
+            x: e.clientX - rect.left,
+            y: e.clientY - rect.top,
+            canvasWidth: rect.width,
+            canvasHeight: rect.height
+          };
+          vm.postIOData('mouse', data);
+          e.preventDefault();
+        });
+        canvas.addEventListener('mouseup', e => {
+          const rect = canvas.getBoundingClientRect();
+          const data = {
+            isDown: false,
+            x: e.clientX - rect.left,
+            y: e.clientY - rect.top,
+            canvasWidth: rect.width,
+            canvasHeight: rect.height
+          };
+          vm.postIOData('mouse', data);
+          e.preventDefault();
+        });
+  
+        // Feed keyboard events as VM I/O events.
+        document.addEventListener('keydown', e => {
+          // Don't capture keys intended for Blockly inputs.
+          if (e.target !== document && e.target !== document.body) {
+            return;
+          }
+          vm.postIOData('keyboard', {
+            keyCode: e.keyCode,
+            isDown: true
+          });
+          e.preventDefault();
+        });
+        document.addEventListener('keyup', e => {
+          // Always capture up events,
+          // even those that have switched to other targets.
+          vm.postIOData('keyboard', {
+            keyCode: e.keyCode,
+            isDown: false
+          });
+          // E.g., prevent scroll.
+          if (e.target !== document && e.target !== document.body) {
+            e.preventDefault();
+          }
+        });
+  
+        $('.greenFlag', canvas.parentNode).on('click', e => {
+          vm.greenFlag();
+        });
+  
+        let project = $(canvas).data('src');
+        const reader = new FileReader();
+        reader.onload = () => {
+          vm.start();
+          vm.loadProject(reader.result)
+            .then(() => {
+              // we add a `#loaded` div to our document, the integration suite
+              // waits for that element to show up to assume the vm is ready
+              // to play!
+              // const div = document.createElement('div');
+              // div.id = 'loaded';
+              // document.body.appendChild(div);
+              //vm.greenFlag();
+            });
+        };
+        if (!(project instanceof File)) {
+          const xhr = new XMLHttpRequest();
+          xhr.open('GET', project);
+          xhr.responseType = 'blob';
+          xhr.onload = function (e) {
+            reader.readAsArrayBuffer(e.target.response);
+          }
+          xhr.send();
+        } else {
+          reader.readAsArrayBuffer(project);
+        }
+      });
+    }
+  
+    function checkvalue(form) {
+      var mystring = $('.memo', a).val();
+      if (!mystring.match(/\S/)) {
+        alert('請填寫心得~~');
+        return false;
+      }
+      return true;
+    }
+  
+    $(function () {
+      $('input[type=file][name="file"]').change(function () {
+        var val = $(this).val().toLowerCase(),
+            regex2 = new RegExp("(.*?)\.(sb2)$"),
+            regex3 = new RegExp("(.*?)\.(sb3)$"),
+            regex4 = new RegExp("(.*?)\.(sbx)$");
+        if (!(regex2.test(val)) && !(regex3.test(val)) && !(regex4.test(val))) {
+          $(this).val('');
+          alert('您的檔案格式錯誤，只能上傳Scratch作品(.sb2或.sb3或.sbx)');
+        }
+      });
+    });
+  
+    function wordCount(val) {
+      var clean_message = val.replace(/\[m_\d+#\d+:\d+:\d+\]/g, '');
+      var chinese = clean_message.match(/[\u4E00-\u9FA5]/g);
+      var pure_english = clean_message.replace(/[\u4E00-\u9FA5]/g, '')
+      var wom = pure_english.match(/\w+/g);
+      return {
+        words: wom ? wom.length : 0,
+        chars: chinese ? chinese.length : 0,
+      };
+    }
+  
+    $('.memo').on('input', function (e) {
+      var v = wordCount(e.target.value);
+      if (v.words + v.chars > 500) {
+        // Split the string on first 200 words and rejoin on spaces
+        $(this).val($(this).val().substring(0, 500));
+      }
+      else {
+        $('.memo_status', e.target.parentNode.parentNode).html("心得感想<BR>(英:" + v.words + " / 中: " + v.chars + ")");
+        $('.memo_e', e.target.parentNode.parentNode).val(v.words);
+        $('.memo_c', e.target.parentNode.parentNode).val(v.chars);
+      }
+    });
+  </script>
 {% endblock %}
