--- a/templates/account/author.html
+++ b/templates/account/author.html
@@ -23,11 +23,10 @@
   <div class="card-body">
     <h5 class="card-title">生活點滴</h5>
     <p class="card-text">
-                  <table class="table">
-        <tr><td width="800"><img src="/static/images/about/zoo.jpg" width="800"><BR>秋天的動物園(1994.9.19)</R></td><td>
+        <table class="table">
+        <tr><td width="800"><img src="/static/images/about/NTNUICE.png" width="800"></td><td>
         </table>
-        <p></p>
-                  
+        <p></p>                  
   </div>  
   <div class="card-body">
     <h5 class="card-title">經歷</h5>
