--- a/templates/account/author.html
+++ b/templates/account/author.html
@@ -14,7 +14,7 @@
            <Table class="table">     
     <Tr>
       <td>國立臺灣師範大學資訊教育學系學士85級</td></Tr>    
-    <Tr><td>國立臺灣師範大學資訊教育研究所碩士<BR>電腦科學教育實驗室</td></Tr>    	
+    <Tr><td>國立臺灣師範大學資訊教育研究所資組教育組碩士<BR>電腦科學教育實驗室</td></Tr>    	
   </Table>       
           </td></tr>
     </table>
@@ -69,7 +69,7 @@
         <tr><td>Lin, K. -Y, Lin, M. -J, & Kao H.-C. (2014). An analysis of difficulties encountered by novice alice programmers. SIGCSE '14 Proceedings of the 45th ACM technical symposium on Computer science education, Pages 707-707. <a href="/static/files/author/SIGCSE2014.pdf" target="_blank">[參訪心得]</td></tr>
         <Tr><td>Wu, C.-C. & Kao H.-C. (2008). Streaming videos in peer assessment to support training pre-service teachers. Educational Technology & Society, 11(1), 45-55. (SSCI)<td></Tr>
         <tr><td>Lai, C.Y., Wu, C. C., Kao, H. C., Chen, S. M.(2005). Using a Handheld Concept-Mapping Tool for Collaborative Learning. NECC2005, Philadelphia, Pennsylvania, June 27-30.</tr></td>
-        <Tr><td>高慧君、吳正己（2002）：美國高中的先修大學電腦科學課程(APCS) 簡介。科學教育月刊，247，64-73。<td></Tr>
+        <Tr><td>高慧君、吳正己（2002）：美國高中的先修大學電腦科學課程(APCS) 簡介。科學教育月刊，247，64-73。[<a href="https://www.sec.ntnu.edu.tw/uploads/asset/data/62564157381784d09345be61/71%E7%BE%8E%E5%9C%8B%E9%AB%98%E4%B8%AD%E7%9A%84%E5%85%88%E4%BF%AE%E5%A4%A7%E5%AD%B8%E9%9B%BB%E8%85%A6%E7%A7%91%E5%AD%B8%E8%AA%B2%E7%A8%8B_apcs_%E7%B0%A1%E4%BB%8B.pdf">PDF</a>]<td></Tr>
       </table>
           </td></tr></table>
         </p>                    
@@ -87,19 +87,20 @@
 	<tr><td>程式設計輕鬆學─使用Scratch 2.x。松崗。2016出版。</td></tr>
 	<tr><td>用積木玩程式設計─使用Scratch 2.x，國小用書。松崗。2015出版。</td></tr>
 	<tr><td>程式設計邏輯訓練─使用Scratch。松崗。2013出版</td></tr>	 	
-	<tr><td>網頁設計手冊（上）─網站開發基礎16堂課。五南。2020出版</td></tr>
-	<tr><td>網頁設計手冊（下）─網站開發案例實作。五南。2021出版</td></tr>    
+	<tr><td>網頁設計手冊（上）─網站開發基礎16堂課。<a href="https://www.wunan.com.tw/bookdetail?NO=14750">五南</a>。2020出版</td></tr>
+	<tr><td>網頁設計手冊（下）─網站開發案例實作。<a href="https://www.wunan.com.tw/bookdetail?NO=15529">五南</a>。2021出版</td></tr>
+  <tr><td>網頁設計手冊套書（全套2冊）。<a href="https://www.wunan.com.tw/bookdetail?NO=15668">五南</a>。2021出版</td></tr>
   </Table>
           </td></tr></table>
     </p>
   </div>  
 
   <div class="card-body">
-    <h5 class="card-title">榮譽</h5>
-    <p class="card-text">
-                        <table class="table">
-        <tr><td width="300px"><img src="/static/images/alumni.jpg" width="280px"><BR><BR><img src="/static/images/about/honor1.png" width="280px"><BR><BR><img src="/static/images/about/honor2.png" width="280px"></td><td>
-		<table class="table">
+  <h5 class="card-title">榮譽</h5>
+  <p class="card-text">
+  <table class="table">
+  <tr><td width="300px"><img src="/static/images/alumni.jpg" width="280px"><BR><BR><img src="/static/images/about/honor1.png" width="280px"><BR><BR><img src="/static/images/about/honor2.png" width="280px"></td><td>
+	<table class="table">
   <tr><td><a href="https://www.coe.ntnu.edu.tw/index.php/2020/08/20/announcement_2020_education100">國立臺灣師範大學2020教育學院社會公益類百大亮點校友</a></td></tr>         
   <tr><td>臺北市第19屆教育專業創新及行動研究高中組教育專業經驗分享類優選：跨領域課程設計與實施-以物理與資訊為例(107年度)<a href="/static/files/author/VPhysics.pdf" target="_blank">[pdf]</a></td></tr>      
 	<tr><td>臺北市106年度優良教師</td></tr>      
@@ -110,17 +111,46 @@
 	<tr><td>臺北市第10屆教育專業創新及行動研究高中組創新教學活動設計類優等：結合英語課程建構線上英打訓練平台-以南港高中「英速小子背單字」為例 (98年度)<a href="/static/files/author/typing.pdf" target="_blank">[pdf]</a></td></tr>
 	<tr><td>教育部88學年度全國各級學校「校園網站」建置競賽高中組佳作</td></tr>	          
   <tr><td>教育部85學年度WWW內容建置競賽佳作：台灣職業棒球棒浦抽水站</td></tr>	         
-  </Table> 
-          </td></tr></table>
-    </p>
+  </table> 
+  </td></tr></table>
+  </p>
   </div>
   <div class="card-body">
     <h5 class="card-title">專題演講</h5>
 		<table class="table">
-  <tr><td><iframe width="560" height="315" src="https://www.youtube.com/embed/SznJebnBy7Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td></tr>         
-  </Table> 
-          </td></tr></table>
-    </p>
+    <tr><td>高慧君、王立忠。晚近美國的高中 電腦科學課程演進簡介。[<a target="_blank" href="https://slidesplayer.com/slide/15098740/">簡報</a>]</td></tr>
+    <tr><td>高慧君。小朋友學程式設計-使用Scratch。2003 臺北全球華人資訊教育論譠。[<a target="_blank" href="/static/files/author/小朋友學程式設計-使用Scratch.pdf">簡報</a>]</td></tr>
+    <tr><td>高慧君。中小學程式設計教學規畫。2005 臺北全球華人資訊教育論譠。[<a target="_blank" href="/static/files/author/程式設計教學規畫.pdf">簡報</a>]</td></tr>
+    <tr><td>高慧君。我與高中生的Python搏鬥史。2006 Fun課後。[<a target="_blank" href="/static/files/author/我與高中生的Python搏鬥史.pdf">簡報</a>]</td></tr>    
+   </table> 
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">南港高中AIoT智慧物聯創意展</h5>
+    <table class="table">
+      <tr><th>智慧物聯程式設計<th></tr>      
+      <tr><td>主題(1):<a target="_blank" href="https://12u10.lab.nycu.edu.tw/project/%e6%98%9f%e9%9a%9b%e6%88%b0%e6%a9%9f%e3%80%90%e7%8e%8b%e6%99%8f%e5%9c%8b-%e5%90%b3%e6%98%8a%e7%85%8a%e3%80%91/">星際戰機</a></td></tr>
+      <tr><td>主題(2):<a target="_blank" href="https://12u10.lab.nycu.edu.tw/project/greehits%ef%bc%81%e3%80%90%e5%91%a8%e5%ad%90%e5%a8%9f-%e5%ad%9f%e6%a2%93%e8%8a%b8%e3%80%91/">GreeHits！</a></td></tr>
+      <tr><td>主題(3):<a target="_blank" href="https://12u10.lab.nycu.edu.tw/project/%e5%ad%90%e5%bd%88%e7%9a%84%e5%86%92%e9%9a%aa/">子彈的冒險</a></td></tr>
+      <tr><td>主題(4):<a target="_blank" href="https://12u10.lab.nycu.edu.tw/project/%e8%81%96%e8%aa%95%e7%a6%ae%e7%89%a9%e3%80%90%e6%9e%97%e8%97%9d%e8%bb%92-%e8%95%ad%e5%98%89%e7%91%a9%e3%80%91/">聖誕禮物</a></td></tr>
+      <tr><td>主題(5):<a target="_blank" href="https://12u10.lab.nycu.edu.tw/project/%e7%bf%bb%e6%bb%be%e5%90%a7%e6%b5%b7%e6%98%9f/">翻滾吧!海星</a></td></tr>
+      <tr><td>主題(6):<a target="_blank" href="https://12u10.lab.nycu.edu.tw/project/%e7%97%9b%e6%89%93%e5%96%aa%e5%b1%8d/">痛打喪屍</a></td></tr>     
+    </table>
+		<table class="table">
+    <tr><th>物理融入程式教育<th></tr>
+    <tr><td>主題(1):<a target="_blank" href="https://12u10.lab.nycu.edu.tw/project/%e9%81%99%e6%8e%a7%e8%bb%8a/">遙控車</a></td></tr>
+    <tr><td>主題(2):<a target="_blank" href="https://12u10.lab.nycu.edu.tw/project/%e6%b8%b8%e6%b3%b3/">逆流而上</a></td></tr>
+    <tr><td>主題(3):<a target="_blank" href="https://12u10.lab.nycu.edu.tw/project/%e9%99%8d%e8%90%bd%e5%82%98/">降落傘</a></td></tr>
+    <tr><td>主題(4):<a target="_blank" href="https://12u10.lab.nycu.edu.tw/project/%e5%be%a9%e5%81%a5%e9%81%8a%e6%88%b2/">運動享「壽」</a></td></tr>
+    <tr><td>主題(5):<a target="_blank" href="https://12u10.lab.nycu.edu.tw/project/%e7%be%bd%e7%90%83%e5%8f%8d%e6%8b%8d%e7%99%bc%e7%90%83%e8%a7%92%e5%ba%a6/">羽球反拍發球</a></td></tr>
+    </table> 
   </div>        
+  <div class="card-body">
+    <h5 class="card-title">文文盃活動成果</h5>
+		<table class="table">
+    <tr><td><a target="_blank" href="https://12u10.lab.nycu.edu.tw/project/%e3%80%90%e4%bd%b3%e4%bd%9c%e7%8d%8e%e3%80%91%e3%80%8c%e8%ad%b7%e3%80%82%e9%82%a6%e5%b0%bc%e3%80%8d-%e9%81%a0%e7%ab%af%e5%8b%95%e4%bd%9c%e6%b1%82%e6%8f%b4%e7%b3%bb%e7%b5%b1/">「護。邦尼」-遠端動作求援系統</a></td></tr>
+    <tr><td><a target="_blank" href="https://12u10.lab.nycu.edu.tw/project/%e3%80%90%e9%8a%85%e7%8d%8e%e3%80%91%e4%bd%a0%e6%84%8f%e6%83%b3%e4%b8%8d%e5%88%b0%e5%8f%af%e4%bb%a5%e7%a9%a9%e5%ae%9a%e6%9c%aa%e4%be%86%e7%9a%84%e8%bb%8a/">你意想不到可以穩定未來的車</a></td></tr>
+    <tr><td><a target="_blank" href="https://12u10.lab.nycu.edu.tw/project/%e4%bb%a5%e4%bb%bf%e7%9c%9f%e9%81%99%e6%8e%a7%e8%bb%8a%e6%8e%a2%e8%a8%8e%e5%8d%b1%e9%9a%aa%e9%a7%95%e9%a7%9b%e8%a1%8c%e7%82%ba/">以仿真遙控車探討危險駕駛行為</a></td></tr>
+    </table> 
+  </div>
 </div>
 {% endblock %}
