--- a/templates/show/gallerylist.html
+++ b/templates/show/gallerylist.html
@@ -9,9 +9,55 @@
 {% for show in lists %}
 <tr><td>
     <h2>
+<!--
       <a href="/show/gallery/detail/{{show.id}}">
         {{ show.title }}
       </a>
+-->
+<script type="text/javascript" id="j">
+
+  // sb3 檔案位置  -----------------------------------------> 只修此處
+  var sb_file = "/show/gallery/detail/{{show.id}}";
+  
+  //是否一開始就播放 (true or false)
+  var AutoStart = false;
+  
+  var DESIRED_USERNAME = "griffpatch",COMPAT = true, TURBO = false;
+  var SRC = "file" ;
+  
+  
+  var request = new XMLHttpRequest();
+  request.open('GET', sb_file, true);
+  request.responseType = 'blob';
+  request.onload = function() {
+      const  reader = new FileReader();
+      reader.readAsDataURL(request.response);
+      reader.onload =  function(e){
+          //console.log('DataURL:', e.target.result);
+          //FILE = "data:application/octet-stream;base64,"+ e.target.result   ;
+          console.log('read sb3 data ok ');
+          var FILE =   e.target.result   ;
+  
+          if (SRC === 'file') {
+  
+                fetch(FILE)
+                  .then(r => r.arrayBuffer())
+                  .then(b => Scratch.vm.loadProject(b));
+              } else {
+                Scratch.vm.downloadProjectId('');
+              }
+      };
+  };
+  request.send();
+  
+  </script>
+  
+  <script src="./js/vm.min.js"></script>
+  <script src="./js/play_scratch.js"></script>
+
+
+
+
     </h2>
 {% if category == "1" %}  
 <div class="scratch-work">
