--- a/templates/account/author.html
+++ b/templates/account/author.html
@@ -14,7 +14,7 @@
            <Table class="table">     
     <Tr>
       <td>國立臺灣師範大學資訊教育學系學士85級</td></Tr>    
-    <Tr><td>國立臺灣師範大學資訊教育研究所資組教育組碩士<BR>電腦科學教育實驗室</td></Tr>    	
+    <Tr><td>國立臺灣師範大學資訊教育研究所資訊教育組碩士<BR>電腦科學教育實驗室</td></Tr>    	
   </Table>       
           </td></tr>
     </table>
@@ -62,14 +62,14 @@
                   <table class="table">
         <tr><td width="300px"><img src="/static/images/about/experience1.png" width="300px"><BR>參與國際會議(2016.5.23)<BR><BR><img src="/static/images/about/experience2.png" width="300px"><BR>參與國際會議(2014.3.7)</td><td>
       <table class="table">    
-        <Tr><td>高慧君、王一哲、石明豐、賴錦緣(2019)VPhysics跨領域課程設計。物理教育學刊。第二十卷第一期, 14-25。[<a href="http://phys5.ncue.edu.tw/physedu/article/20-1/2.pdf">PDF</a>]</td></tr>
+        <Tr><td>高慧君、王一哲、石明豐、賴錦緣(2019):VPhysics跨領域課程設計。物理教育學刊。第二十卷第一期, 14-25。[<a href="http://phys5.ncue.edu.tw/physedu/article/20-1/2.pdf">PDF</a>]</td></tr>
         <Tr><td>高慧君(2017)：程式教育！老師，您準備好了嗎？。翰林出版社文宣。 <a href="/static/images/about/hanlin3.jpg" target="_blank">[PIC1]</a> <a href="/static/images/about/hanlin4.jpg" target="_blank">[PIC2]</a> </td></Tr>        
-        <Tr><td>高慧君、賴阿福(2017)：運用物理模擬動畫創作輔助高中生學習程式設計之研究，GCCCE 2017，北京：北京師範大學. June 2-6, 2017。 <a href="/static/files/author/GCCCE2017-jean.pdf" target="_blank">[PDF]</a> <a href="/static/files/author/GCCCE2017-report.pdf" target="_blank">[參訪心得]</a></td></Tr>        
-        <Tr><td>高慧君(2016)：從 Scratch 到Raspberry Pi：中小學程式設計課程規畫，GCCCE 2016，137-144，香港：香港教育學院. May 23-27, 2016。<a href="/static/files/author/GCCCE2016-jean.pdf" target="_blank">[PDF]</a> <a href="/static/files/author/GCCCE2016-report.pdf" target="_blank">[參訪心得]</a></td></Tr>        
+        <Tr><td>高慧君、賴阿福(2017):運用物理模擬動畫創作輔助高中生學習程式設計之研究, GCCCE 2017, 北京：北京師範大學. June 2-6, 2017。 <a href="/static/files/author/GCCCE2017-jean.pdf" target="_blank">[PDF]</a> <a href="/static/files/author/GCCCE2017-report.pdf" target="_blank">[參訪心得]</a></td></Tr>        
+        <Tr><td>高慧君(2016)：從 Scratch 到Raspberry Pi:中小學程式設計課程規畫, GCCCE 2016, 137-144, 香港：香港教育學院. May 23-27, 2016。<a href="/static/files/author/GCCCE2016-jean.pdf" target="_blank">[PDF]</a> <a href="/static/files/author/GCCCE2016-report.pdf" target="_blank">[參訪心得]</a></td></Tr>        
         <tr><td>Lin, K. -Y, Lin, M. -J, & Kao H.-C. (2014). An analysis of difficulties encountered by novice alice programmers. SIGCSE '14 Proceedings of the 45th ACM technical symposium on Computer science education, Pages 707-707. <a href="/static/files/author/SIGCSE2014.pdf" target="_blank">[參訪心得]</td></tr>
         <Tr><td>Wu, C.-C. & Kao H.-C. (2008). Streaming videos in peer assessment to support training pre-service teachers. Educational Technology & Society, 11(1), 45-55. (SSCI)<td></Tr>
         <tr><td>Lai, C.Y., Wu, C. C., Kao, H. C., Chen, S. M.(2005). Using a Handheld Concept-Mapping Tool for Collaborative Learning. NECC2005, Philadelphia, Pennsylvania, June 27-30.</tr></td>
-        <Tr><td>高慧君、吳正己（2002）：美國高中的先修大學電腦科學課程(APCS) 簡介。科學教育月刊，247，64-73。[<a href="https://www.sec.ntnu.edu.tw/uploads/asset/data/62564157381784d09345be61/71%E7%BE%8E%E5%9C%8B%E9%AB%98%E4%B8%AD%E7%9A%84%E5%85%88%E4%BF%AE%E5%A4%A7%E5%AD%B8%E9%9B%BB%E8%85%A6%E7%A7%91%E5%AD%B8%E8%AA%B2%E7%A8%8B_apcs_%E7%B0%A1%E4%BB%8B.pdf">PDF</a>]<td></Tr>
+        <Tr><td>高慧君、吳正己(2002):美國高中的先修大學電腦科學課程(APCS) 簡介。科學教育月刊, 247, 64-73。[<a href="https://www.sec.ntnu.edu.tw/uploads/asset/data/62564157381784d09345be61/71%E7%BE%8E%E5%9C%8B%E9%AB%98%E4%B8%AD%E7%9A%84%E5%85%88%E4%BF%AE%E5%A4%A7%E5%AD%B8%E9%9B%BB%E8%85%A6%E7%A7%91%E5%AD%B8%E8%AA%B2%E7%A8%8B_apcs_%E7%B0%A1%E4%BB%8B.pdf">PDF</a>]<td></Tr>
       </table>
           </td></tr></table>
         </p>                    
@@ -81,15 +81,15 @@
             <table class="table">
         <tr><td width="200px"><img src="/static/images/about/book3.png" width="180px"></td><td>
         <Table class="table" style="width:100%">     
-  <tr><td>動動手玩積木遊戲─使用Scratch 2.x，國小用書，松崗。2017出版。</td></tr>          
-	<tr><td>動動手玩積木遊戲─使用Scratch 2.x，國小用書，松崗。2017出版。</td></tr>
+  <tr><td>動動手玩積木遊戲─使用Scratch 2.x, 國小用書, 松崗。2017出版。</td></tr>          
+	<tr><td>動動手玩積木遊戲─使用Scratch 2.x, 國小用書, 松崗。2017出版。</td></tr>
 	<tr><td>趣學Scratch─教孩子學編程。簡體中文。人民郵電出版社。2016出版。</td></tr>  
 	<tr><td>程式設計輕鬆學─使用Scratch 2.x。松崗。2016出版。</td></tr>
-	<tr><td>用積木玩程式設計─使用Scratch 2.x，國小用書。松崗。2015出版。</td></tr>
+	<tr><td>用積木玩程式設計─使用Scratch 2.x, 國小用書。松崗。2015出版。</td></tr>
 	<tr><td>程式設計邏輯訓練─使用Scratch。松崗。2013出版</td></tr>	 	
-	<tr><td>網頁設計手冊（上）─網站開發基礎16堂課。<a href="https://www.wunan.com.tw/bookdetail?NO=14750">五南</a>。2020出版</td></tr>
-	<tr><td>網頁設計手冊（下）─網站開發案例實作。<a href="https://www.wunan.com.tw/bookdetail?NO=15529">五南</a>。2021出版</td></tr>
-  <tr><td>網頁設計手冊套書（全套2冊）。<a href="https://www.wunan.com.tw/bookdetail?NO=15668">五南</a>。2021出版</td></tr>
+	<tr><td>網頁設計手冊(上)─網站開發基礎16堂課。<a href="https://www.wunan.com.tw/bookdetail?NO=14750">五南</a>。2020出版</td></tr>
+	<tr><td>網頁設計手冊(下)─網站開發案例實作。<a href="https://www.wunan.com.tw/bookdetail?NO=15529">五南</a>。2021出版</td></tr>
+  <tr><td>網頁設計手冊套書(全套2冊)。<a href="https://www.wunan.com.tw/bookdetail?NO=15668">五南</a>。2021出版</td></tr>
   </Table>
           </td></tr></table>
     </p>
@@ -102,15 +102,15 @@
   <tr><td width="300px"><img src="/static/images/alumni.jpg" width="280px"><BR><BR><img src="/static/images/about/honor1.png" width="280px"><BR><BR><img src="/static/images/about/honor2.png" width="280px"></td><td>
 	<table class="table">
   <tr><td><a href="https://www.coe.ntnu.edu.tw/index.php/2020/08/20/announcement_2020_education100">國立臺灣師範大學2020教育學院社會公益類百大亮點校友</a></td></tr>         
-  <tr><td>臺北市第19屆教育專業創新及行動研究高中組教育專業經驗分享類優選：跨領域課程設計與實施-以物理與資訊為例(107年度)<a href="/static/files/author/VPhysics.pdf" target="_blank">[pdf]</a></td></tr>      
+  <tr><td>臺北市第19屆教育專業創新及行動研究高中組教育專業經驗分享類優選: 跨領域課程設計與實施-以物理與資訊為例(107年度)<a href="/static/files/author/VPhysics.pdf" target="_blank">[pdf]</a></td></tr>      
 	<tr><td>臺北市106年度優良教師</td></tr>      
 	<tr><td>指導學生參加臺北市104年度機器人競賽榮獲高中職創意組第1,3名</td></tr>	
-	<tr><td>國家教育研究院102年度全國教師創新教學媒體競賽高中職組佳作：<BR>亂數化演算法模擬軟體</td></tr>
-	<tr><td>教育部101年度教學卓越銀質獎：用愛看世界記錄片創作<a href="/static/files/author/love.pdf" target="_blank">[pdf]</a></td></tr>	      
-  <tr><td>臺北市第13屆教育專業創新及行動研究高中組創新教學活動設計類佳作：應用互動遊戲創作對高中程式設計課程之影響 (101年度)<a href="/static/files/author/scratch.pdf" target="_blank">[pdf]</a></td></tr>      
-	<tr><td>臺北市第10屆教育專業創新及行動研究高中組創新教學活動設計類優等：結合英語課程建構線上英打訓練平台-以南港高中「英速小子背單字」為例 (98年度)<a href="/static/files/author/typing.pdf" target="_blank">[pdf]</a></td></tr>
+	<tr><td>國家教育研究院102年度全國教師創新教學媒體競賽高中職組佳作: <BR>亂數化演算法模擬軟體</td></tr>
+	<tr><td>教育部101年度教學卓越銀質獎: 用愛看世界記錄片創作<a href="/static/files/author/love.pdf" target="_blank">[pdf]</a></td></tr>	      
+  <tr><td>臺北市第13屆教育專業創新及行動研究高中組創新教學活動設計類佳作: 應用互動遊戲創作對高中程式設計課程之影響 (101年度)<a href="/static/files/author/scratch.pdf" target="_blank">[pdf]</a></td></tr>      
+	<tr><td>臺北市第10屆教育專業創新及行動研究高中組創新教學活動設計類優等: 結合英語課程建構線上英打訓練平台-以南港高中「英速小子背單字」為例 (98年度)<a href="/static/files/author/typing.pdf" target="_blank">[pdf]</a></td></tr>
 	<tr><td>教育部88學年度全國各級學校「校園網站」建置競賽高中組佳作</td></tr>	          
-  <tr><td>教育部85學年度WWW內容建置競賽佳作：台灣職業棒球棒浦抽水站</td></tr>	         
+  <tr><td>教育部85學年度WWW內容建置競賽佳作: 台灣職業棒球棒浦抽水站</td></tr>	         
   </table> 
   </td></tr></table>
   </p>
