--- a/templates/account/author.html
+++ b/templates/account/author.html
@@ -101,6 +101,8 @@
   <table class="table">
   <tr><td width="300px"><img src="/static/images/alumni.jpg" width="280px"><BR><BR><img src="/static/images/about/honor1.png" width="280px"><BR><BR><img src="/static/images/about/honor2.png" width="280px"></td><td>
 	<table class="table">
+  <tr><td>指導學生參加112年度第三屆文文盃AIOT Sensor(智聯感測)全國聯賽榮獲高中職佳作</td></tr>	    
+  <tr><td>指導學生參加110年度第一屆文文盃AIOT Sensor(智聯感測)全國聯賽榮獲高中職銅獎</td></tr>	    
   <tr><td><a href="https://www.coe.ntnu.edu.tw/index.php/2020/08/20/announcement_2020_education100">國立臺灣師範大學2020教育學院社會公益類百大亮點校友</a></td></tr>         
   <tr><td>臺北市第19屆教育專業創新及行動研究高中組教育專業經驗分享類優選: 跨領域課程設計與實施-以物理與資訊為例(107年度)<a href="/static/files/author/VPhysics.pdf" target="_blank">[pdf]</a></td></tr>      
 	<tr><td>臺北市106年度優良教師</td></tr>      
