--- a/templates/account/author.html
+++ b/templates/account/author.html
@@ -24,16 +24,15 @@
     <h5 class="card-title">生活點滴</h5>
     <p class="card-text">
         <table class="table">
-        <tr><td width="800"><img src="/static/images/about/NTNUICE.png" width="800"></td><td>
+        <tr><td width="800"><img src="/static/images/about/NTNUICE.png" width="800">全國大專院校資訊科系校際盃各項運動錦標賽 (1994)</td><td>
+        <tr><td width="800"><img src="/static/images/about/icerc.png" width="800px"><BR>資訊學科中心參訪南投縣仁愛鄉曲冰數位機會中心 (2011.7.28)</td><td>
+        <tr><td width="800"><img src="/static/images/about/Taipei.jpg" width="800px"><BR>臺北市政府教育局智慧教育輔導團 ViewSonic 總部參訪 (2020.11.30)</td><td>       
         </table>
-        <p></p>                  
+    </p>          
   </div>  
   <div class="card-body">
     <h5 class="card-title">經歷</h5>
-    <p class="card-text">
-                  <table class="table">
-        <tr><td width="400px"><img src="/static/images/about/icerc.png" width="400px"><BR>資訊學科中心參訪南投縣仁愛鄉曲冰數位機會中心(2011.7.28)</R></td><td>
-      <table class="table">    
+    <table class="table">    
     <Tr><td>臺北市立南港國中數學教師(1996.8~1998.7)</td></Tr>        
     <Tr><td>臺北市立南港國中電腦教師(1998.8~1999.7)</td></Tr>      
     <Tr><td>臺北市立南港高中資訊教師(1999.7~迄今)</td></Tr>    
