--- a/templates/account/author.html
+++ b/templates/account/author.html
@@ -10,10 +10,10 @@
     <h5 class="card-title">學歷</h5>
     <p class="card-text">
       <table class="table">
-        <tr><td width=100px><img src="/static/images/jean2004.jpg" style="float:left;"></td><td>
+        <tr><td width="200px"><img src="/static/images/Jean2004.png" width="200px" style="float:left;"></td><td>
            <Table class="table">     
-    <Tr>
-      <td>國立臺灣師範大學資訊教育學系學士85級</td></Tr>    
+    <Tr><td>國立臺灣師範大學資訊教育學系學士85級</td></Tr>
+    <Tr><td>臺北市立中等學校 電腦科(計算機概論) 合格教師 中華民國90年12月</td></Tr> 
     <Tr><td>國立臺灣師範大學資訊教育研究所資訊教育組碩士<BR>電腦科學教育實驗室</td></Tr>    	
   </Table>       
           </td></tr>
