--- a/templates/account/author.html
+++ b/templates/account/author.html
@@ -111,7 +111,7 @@
   <tr><td>臺北市第13屆教育專業創新及行動研究高中組創新教學活動設計類佳作: 應用互動遊戲創作對高中程式設計課程之影響 (101年度)<a href="/static/files/author/scratch.pdf" target="_blank">[pdf]</a></td></tr>      
 	<tr><td>臺北市第10屆教育專業創新及行動研究高中組創新教學活動設計類優等: 結合英語課程建構線上英打訓練平台-以南港高中「英速小子背單字」為例 (98年度)<a href="/static/files/author/typing.pdf" target="_blank">[pdf]</a></td></tr>
 	<tr><td>教育部88學年度全國各級學校「校園網站」建置競賽高中組佳作</td></tr>	          
-  <tr><td>教育部85學年度WWW內容建置競賽佳作: 台灣職業棒球棒浦抽水站</td></tr>	         
+  <tr><td>教育部85學年度WWW內容建置競賽佳作: 台灣職業棒球棒浦抽水站[<a target="_blank" href="/static/images/1996WWW.png">pic</a>]        
   </table> 
   </td></tr></table>
   </p>
