--- a/templates/account/author.html
+++ b/templates/account/author.html
@@ -98,7 +98,16 @@
   <h5 class="card-title">榮譽</h5>
   <p class="card-text">
   <table class="table">
-  <tr><td width="300px"><img src="/static/images/alumni.jpg" width="280px"><BR><BR><img src="/static/images/about/honor1.png" width="280px"><BR><BR><img src="/static/images/about/honor2.png" width="280px"></td><td>
+  <tr><td width="300px">
+    <img src="/static/images/alumni.jpg" width="280px">
+    <BR><BR>
+    <img src="/static/images/about/honor1.png" width="280px">
+    <BR><BR>
+    <img src="/static/images/about/honor2.png" width="280px">
+    <BR><BR>
+    <img src="/static/images/about/honor3.png" width="280px">
+    <BR><BR>
+  </td><td>
 	<table class="table">
   <tr><td>指導學生參加112年度第三屆文文盃AIOT Sensor(智聯感測)全國聯賽榮獲高中職佳作</td></tr>	    
   <tr><td>指導學生參加110年度第一屆文文盃AIOT Sensor(智聯感測)全國聯賽榮獲高中職銅獎</td></tr>	    
