--- a/templates/base.html
+++ b/templates/base.html
@@ -96,11 +96,11 @@ Licence URI: http://www.os-templates.com/template-terms
           </li>      
           <li><a href="#">南港高中數位科學實驗班成果展</a>
             <ul>           
-               <li><a href="https://hackmd.io/@h3BSPiUpQhCVyCHgJAWWHg/By8ZOj-DI" target="_blank">第一屆智慧感測</a></li>  
-               <li><a href="https://hackmd.io/@h3BSPiUpQhCVyCHgJAWWHg/ByDVYuZVO" target="_blank">第二屆智慧物聨</a></li>     
-               <li><a href="https://hackmd.io/@wHOeRCsYSP-B68Reck4vWQ/Hy2q-J9Pq" target="_blank">第三屆智聨感測</a></li>  
-               <li><a href="https://hackmd.io/@wHOeRCsYSP-B68Reck4vWQ/rkW0Wk5Pc/" target="_blank">第四屆智慧生活</a></li>                                              
-               <li><a href="https://hackmd.io/@wHOeRCsYSP-B68Reck4vWQ/BkgcZpVbU0/" target="_blank">第五屆智慧城市</a></li>                                              
+               <li><a href="https://hackmd.io/@wHOeRCsYSP-B68Reck4vWQ/r1MZUTPwC" target="_blank">第一屆智慧感測-fine</a></li>  
+               <li><a href="https://hackmd.io/@h3BSPiUpQhCVyCHgJAWWHg/ByDVYuZVO" target="_blank">第二屆智慧物聨-none</a></li>     
+               <li><a href="https://hackmd.io/@wHOeRCsYSP-B68Reck4vWQ/Hy2q-J9Pq" target="_blank">第三屆智聨感測-none</a></li>  
+               <li><a href="https://hackmd.io/@wHOeRCsYSP-B68Reck4vWQ/rkW0Wk5Pc/" target="_blank">第四屆智慧生活-fine</a></li>                                              
+               <li><a href="https://hackmd.io/@wHOeRCsYSP-B68Reck4vWQ/BkgcZpVbU0/" target="_blank">第五屆智慧城市-ok</a></li>                                              
               </ul>           
           </li>                
           <li><a href="/student/lessons/F">網路讀書會：好書共讀</a></li>
