--- a/templates/base.html
+++ b/templates/base.html
@@ -193,7 +193,7 @@ Licence URI: http://www.os-templates.com/template-terms
 <!-- ####################################################################################################### -->
   <div class="wrapper">
     <div id="copyright">
-      <p class="fl_left">Copyright &copy; All Rights Reserved</p>
+      <p class="fl_left">Since 2018 Copyright &copy; All Rights Reserved</p>
       <p class="fl_right">Template by <a target="_blank" href="http://www.os-templates.com/" title="Free Website Templates">OS Templates</a>
       Designed by <a href='http://www.freepik.com'>Freepik</a></p>
       <br class="clear" />
